syntax = "proto3";

package hwscFileTransactionSvc;

import "authority.proto";

// The file transaction service definition
service FileTransactionService {
    // Gets status for user
    rpc GetStatus (FileTransactionRequest) returns (FileTransactionResponse) {
    }
    // Upload files to the storage
    rpc UploadFile (stream Chunk) returns (FileTransactionResponse) {
    }
    // Download files from the storage
    rpc DownloadZippedFiles (FileTransactionRequest) returns (stream Chunk) {
    }
    // Create user folder in the sorage
    rpc CreateUserFolder (FileTransactionRequest) returns (FileTransactionResponse) {
    }
}

message FileTransactionRequest {
    hwsc.Authority authority = 1;
    string message = 2;
    string name = 3;
    string uuid = 4;
    repeated string urls = 5;
}

message FileTransactionResponse {
    oneof status {
        uint32 code = 1;
    }
    string message = 2;
    string url = 3;
}

message Chunk {
    oneof test_oneof {
        hwsc.Authority authority = 1;
        bytes buffer = 2;
        int64 length = 3;
        string file_name = 4;
        string uuid = 5;
    }
}
